@startuml

title __EX1_7's Class Diagram__\n

  namespace  {
    namespace x1_7 {
      abstract class ex1_7.Animal {
          {abstract} + greeting()
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.BigDog {
          + greeting()
          + greeting()
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.Cat {
          + greeting()
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.Dog {
          + greeting()
          + greeting()
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.TestAnimal {
          {static} + main()
      }
    }
  }
  

  ex1_7.BigDog -up-|> ex1_7.Dog
  ex1_7.Cat -up-|> ex1_7.Animal
  ex1_7.Dog -up-|> ex1_7.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
